--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hospital-management",
+  "name": "responsive Tailwind",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,13 +8,14 @@
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER='google-chrome-stable' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
